// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Om den avdøde Skal rendre selvstendig 1`] = `
<div>
  <form>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe"
    >
      <h1
        class="center navds-heading navds-heading--medium"
      >
        dinSituasjon.tittel
      </h1>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe"
    >
      <h1
        class="navds-heading navds-heading--small"
      >
        dinSituasjon.undertittel
      </h1>
      <p
        class="navds-body-long"
      >
        dinSituasjon.ingress
      </p>
      <div
        aria-live="polite"
      />
    </fieldset>
    <div
      id="jobbStatus"
    >
      <fieldset
        aria-invalid="false"
        class="skjemagruppe checkboxgruppe"
      >
        <legend
          class="skjemagruppe__legend"
        >
          dinSituasjon.jobbStatus
        </legend>
        <label
          class="inputPanel checkboksPanel inputPanel--checked"
        >
          <input
            aria-checked="true"
            aria-invalid="false"
            checked=""
            class="inputPanel__field"
            required=""
            type="checkbox"
            value="jobbStatus.arbeidstaker"
          />
          <span
            class="inputPanel__label"
          >
            jobbStatus.arbeidstaker
          </span>
        </label>
        <label
          class="inputPanel checkboksPanel inputPanel--checked"
        >
          <input
            aria-checked="true"
            aria-invalid="false"
            class="inputPanel__field"
            required=""
            type="checkbox"
            value="jobbStatus.selvstendig"
          />
          <span
            class="inputPanel__label"
          >
            jobbStatus.selvstendig
          </span>
        </label>
        <label
          class="inputPanel checkboksPanel"
        >
          <input
            aria-checked="false"
            aria-invalid="false"
            class="inputPanel__field"
            required=""
            type="checkbox"
            value="jobbStatus.underUtdanning"
          />
          <span
            class="inputPanel__label"
          >
            jobbStatus.underUtdanning
          </span>
        </label>
        <label
          class="inputPanel checkboksPanel"
        >
          <input
            aria-checked="false"
            aria-invalid="false"
            class="inputPanel__field"
            required=""
            type="checkbox"
            value="jobbStatus.arbeidssoker"
          />
          <span
            class="inputPanel__label"
          >
            jobbStatus.arbeidssoker
          </span>
        </label>
        <label
          class="inputPanel checkboksPanel"
        >
          <input
            aria-checked="false"
            aria-invalid="false"
            class="inputPanel__field"
            required=""
            type="checkbox"
            value="jobbStatus.ingen"
          />
          <span
            class="inputPanel__label"
          >
            jobbStatus.ingen
          </span>
        </label>
        <div
          aria-live="polite"
        />
      </fieldset>
    </div>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-beySbM decPBp"
    >
      <fieldset
        aria-invalid="false"
        class="skjemagruppe"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.arbeidsforhold.tittel
        </h1>
        <div
          aria-live="polite"
        />
      </fieldset>
      <div
        class="navds-panel luft-under navds-panel--border"
      >
        <div
          class="kol-75"
        >
          <div
            class="skjemaelement"
          >
            <label
              class="skjemaelement__label"
              for="arbeidsforhold[0].arbeidsgiver"
            >
              dinSituasjon.arbeidsforhold.arbeidsgiver
            </label>
            <input
              aria-invalid="false"
              class="skjemaelement__input input--fullbredde"
              id="arbeidsforhold[0].arbeidsgiver"
              required=""
              type="text"
              value="Potetskreller AS"
            />
          </div>
        </div>
        <fieldset
          aria-invalid="false"
          class="skjemagruppe sc-csKIKE eJBcFQ"
        >
          <div
            id="arbeidsforhold[0].ansettelsesforhold"
          >
            <div
              class="skjemaelement"
            >
              <label
                class="skjemaelement__label"
              >
                dinSituasjon.arbeidsforhold.ansettelsesforhold
              </label>
              <div
                class="selectContainer input--l"
              >
                <select
                  aria-invalid="false"
                  class="skjemaelement__input"
                >
                  <option
                    value=""
                  >
                    felles.velg
                  </option>
                  <option
                    value="stillingType.fast"
                  >
                    stillingType.fast
                  </option>
                  <option
                    value="stillingType.midlertidig"
                  >
                    stillingType.midlertidig
                  </option>
                  <option
                    value="stillingType.sesongarbeid"
                  >
                    stillingType.sesongarbeid
                  </option>
                </select>
              </div>
            </div>
          </div>
          <div
            class="skjemaelement"
          >
            <label
              class="skjemaelement__label"
              for="arbeidsforhold[0].stillingsprosent"
            >
              dinSituasjon.arbeidsforhold.stillingsprosent
            </label>
            <input
              aria-invalid="false"
              class="skjemaelement__input input--fullbredde"
              id="arbeidsforhold[0].stillingsprosent"
              placeholder="dinSituasjon.arbeidsforhold.stillingsprosentPlaceholder"
              required=""
              type="text"
              value="100%"
            />
          </div>
          <div
            aria-live="polite"
          />
        </fieldset>
        <div
          id="arbeidsforhold[0].forventerEndretInntekt.svar"
        >
          <fieldset
            aria-invalid="false"
            class="skjemagruppe inputPanelGruppe sc-guDLRT iRKjLN"
          >
            <legend
              class="skjemagruppe__legend"
            >
              dinSituasjon.arbeidsforhold.forventerEndretInntekt.svar
            </legend>
            <div
              class="inputPanelGruppe__inner"
            >
              <label
                class="inputPanel radioPanel"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="inputPanel__field"
                  name="arbeidsforhold[0].forventerEndretInntekt.svar"
                  required=""
                  type="radio"
                  value="radiobuttons.ja"
                />
                <span
                  class="inputPanel__label"
                >
                  radiobuttons.ja
                </span>
              </label>
              <label
                class="inputPanel radioPanel"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="inputPanel__field"
                  name="arbeidsforhold[0].forventerEndretInntekt.svar"
                  required=""
                  type="radio"
                  value="radiobuttons.nei"
                />
                <span
                  class="inputPanel__label"
                >
                  radiobuttons.nei
                </span>
              </label>
              <label
                class="inputPanel radioPanel"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="inputPanel__field"
                  name="arbeidsforhold[0].forventerEndretInntekt.svar"
                  required=""
                  type="radio"
                  value="radiobuttons.vetIkke"
                />
                <span
                  class="inputPanel__label"
                >
                  radiobuttons.vetIkke
                </span>
              </label>
            </div>
            <div
              aria-live="polite"
            />
          </fieldset>
        </div>
      </div>
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          aria-live="polite"
          class="navds-label"
        >
          + 
          knapp.leggTilArbeidsforhold
        </span>
      </button>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-beySbM decPBp"
    >
      <fieldset
        aria-invalid="false"
        class="skjemagruppe"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.selvstendig.tittel
        </h1>
        <div
          aria-live="polite"
        />
      </fieldset>
      <div
        class="navds-panel luft-under navds-panel--border"
      >
        <div
          class="kol-75"
        >
          <div
            class="skjemaelement"
          >
            <label
              class="skjemaelement__label"
              for="selvstendig[0].beskrivelse"
            >
              dinSituasjon.selvstendig.beskrivelse
            </label>
            <input
              aria-invalid="false"
              class="skjemaelement__input input--fullbredde"
              id="selvstendig[0].beskrivelse"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
        <fieldset
          aria-invalid="false"
          class="skjemagruppe"
        >
          <div
            class="skjemaelement"
          >
            <label
              class="skjemaelement__label"
              for="selvstendig[0].orgnr"
            >
              dinSituasjon.selvstendig.orgnr
            </label>
            <input
              aria-invalid="false"
              class="skjemaelement__input input--fullbredde"
              id="selvstendig[0].orgnr"
              placeholder="dinSituasjon.selvstendig.orgnrplaceholder"
              required=""
              type="text"
              value=""
            />
          </div>
          <div
            aria-live="polite"
          />
        </fieldset>
        <div
          id="selvstendig[0].forventerEndretInntekt.svar"
        >
          <fieldset
            aria-invalid="false"
            class="skjemagruppe inputPanelGruppe sc-guDLRT iRKjLN"
          >
            <legend
              class="skjemagruppe__legend"
            >
              dinSituasjon.selvstendig.forventerEndretInntekt.svar
            </legend>
            <div
              class="inputPanelGruppe__inner"
            >
              <label
                class="inputPanel radioPanel"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="inputPanel__field"
                  name="selvstendig[0].forventerEndretInntekt.svar"
                  required=""
                  type="radio"
                  value="radiobuttons.ja"
                />
                <span
                  class="inputPanel__label"
                >
                  radiobuttons.ja
                </span>
              </label>
              <label
                class="inputPanel radioPanel"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="inputPanel__field"
                  name="selvstendig[0].forventerEndretInntekt.svar"
                  required=""
                  type="radio"
                  value="radiobuttons.nei"
                />
                <span
                  class="inputPanel__label"
                >
                  radiobuttons.nei
                </span>
              </label>
              <label
                class="inputPanel radioPanel"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="inputPanel__field"
                  name="selvstendig[0].forventerEndretInntekt.svar"
                  required=""
                  type="radio"
                  value="radiobuttons.vetIkke"
                />
                <span
                  class="inputPanel__label"
                >
                  radiobuttons.vetIkke
                </span>
              </label>
            </div>
            <div
              aria-live="polite"
            />
          </fieldset>
        </div>
      </div>
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          aria-live="polite"
          class="navds-label"
        >
          + 
          knapp.leggTilNaeringer
        </span>
      </button>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-beySbM decPBp"
    >
      <fieldset
        aria-invalid="false"
        class="skjemagruppe"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.utdanning.tittelFullfoert
        </h1>
        <div
          aria-live="polite"
        />
      </fieldset>
      <div
        id="utdanning.hoyesteFullfoerteUtdanning"
      >
        <fieldset
          aria-invalid="false"
          class="skjemagruppe inputPanelGruppe"
        >
          <legend
            class="skjemagruppe__legend"
          >
            dinSituasjon.utdanning.hoyesteFullfoerteUtdanning
          </legend>
          <div
            class="inputPanelGruppe__inner"
          >
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="utdanning.hoyesteFullfoerteUtdanning"
                required=""
                type="radio"
                value="utdanning.grunnskole"
              />
              <span
                class="inputPanel__label"
              >
                utdanning.grunnskole
              </span>
            </label>
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="utdanning.hoyesteFullfoerteUtdanning"
                required=""
                type="radio"
                value="utdanning.videregående"
              />
              <span
                class="inputPanel__label"
              >
                utdanning.videregående
              </span>
            </label>
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="utdanning.hoyesteFullfoerteUtdanning"
                required=""
                type="radio"
                value="utdanning.fagbrev"
              />
              <span
                class="inputPanel__label"
              >
                utdanning.fagbrev
              </span>
            </label>
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="utdanning.hoyesteFullfoerteUtdanning"
                required=""
                type="radio"
                value="utdanning.bachelorgrad"
              />
              <span
                class="inputPanel__label"
              >
                utdanning.bachelorgrad
              </span>
            </label>
            <label
              class="inputPanel radioPanel inputPanel--checked"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                checked=""
                class="inputPanel__field"
                name="utdanning.hoyesteFullfoerteUtdanning"
                required=""
                type="radio"
                value="utdanning.mastergrad"
              />
              <span
                class="inputPanel__label"
              >
                utdanning.mastergrad
              </span>
            </label>
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="utdanning.hoyesteFullfoerteUtdanning"
                required=""
                type="radio"
                value="utdanning.ingen"
              />
              <span
                class="inputPanel__label"
              >
                utdanning.ingen
              </span>
            </label>
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="utdanning.hoyesteFullfoerteUtdanning"
                required=""
                type="radio"
                value="utdanning.annen"
              />
              <span
                class="inputPanel__label"
              >
                utdanning.annen
              </span>
            </label>
          </div>
          <div
            aria-live="polite"
          />
        </fieldset>
      </div>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-beySbM decPBp"
    >
      <fieldset
        aria-invalid="false"
        class="skjemagruppe"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.andreYtelser.tittel
        </h1>
        <p
          class="navds-body-long"
        >
          dinSituasjon.andreYtelser.ingress
        </p>
        <div
          aria-live="polite"
        />
      </fieldset>
      <div
        id="andreYtelser.kravOmAnnenStonad.svar"
      >
        <fieldset
          aria-invalid="false"
          class="skjemagruppe inputPanelGruppe sc-guDLRT iRKjLN"
        >
          <legend
            class="skjemagruppe__legend"
          >
            dinSituasjon.andreYtelser.kravOmAnnenStonad.svar
          </legend>
          <div
            class="inputPanelGruppe__inner"
          >
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="andreYtelser.kravOmAnnenStonad.svar"
                required=""
                type="radio"
                value="radiobuttons.ja"
              />
              <span
                class="inputPanel__label"
              >
                radiobuttons.ja
              </span>
            </label>
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="andreYtelser.kravOmAnnenStonad.svar"
                required=""
                type="radio"
                value="radiobuttons.nei"
              />
              <span
                class="inputPanel__label"
              >
                radiobuttons.nei
              </span>
            </label>
          </div>
          <div
            aria-live="polite"
          />
        </fieldset>
      </div>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-beySbM decPBp"
    >
      <div
        id="andreYtelser.annenPensjon.svar"
      >
        <fieldset
          aria-invalid="false"
          class="skjemagruppe inputPanelGruppe sc-guDLRT iRKjLN"
        >
          <legend
            class="skjemagruppe__legend"
          >
            dinSituasjon.andreYtelser.annenPensjon.svar
          </legend>
          <div
            class="inputPanelGruppe__inner"
          >
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="andreYtelser.annenPensjon.svar"
                required=""
                type="radio"
                value="radiobuttons.ja"
              />
              <span
                class="inputPanel__label"
              >
                radiobuttons.ja
              </span>
            </label>
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="andreYtelser.annenPensjon.svar"
                required=""
                type="radio"
                value="radiobuttons.nei"
              />
              <span
                class="inputPanel__label"
              >
                radiobuttons.nei
              </span>
            </label>
          </div>
          <div
            aria-live="polite"
          />
        </fieldset>
      </div>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-beySbM decPBp"
    >
      <div
        id="andreYtelser.mottarPensjonUtland.svar"
      >
        <fieldset
          aria-invalid="false"
          class="skjemagruppe inputPanelGruppe sc-guDLRT iRKjLN"
        >
          <legend
            class="skjemagruppe__legend"
          >
            dinSituasjon.andreYtelser.mottarPensjonUtland.svar
          </legend>
          <div
            class="skjemagruppe__description"
          >
            <div>
              <button
                aria-expanded="false"
                class="sc-dmyDGi gqYaIN navds-button navds-button--primary navds-button--medium"
                data-testid="hvorforPanel_toggle"
                type="button"
              >
                <span
                  aria-live="polite"
                  class="navds-label"
                >
                  <span>
                    hvorforSpoerVi
                  </span>
                  <span>
                    <svg
                      fill="none"
                      focusable="false"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            class="inputPanelGruppe__inner"
          >
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="andreYtelser.mottarPensjonUtland.svar"
                required=""
                type="radio"
                value="radiobuttons.ja"
              />
              <span
                class="inputPanel__label"
              >
                radiobuttons.ja
              </span>
            </label>
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="andreYtelser.mottarPensjonUtland.svar"
                required=""
                type="radio"
                value="radiobuttons.nei"
              />
              <span
                class="inputPanel__label"
              >
                radiobuttons.nei
              </span>
            </label>
          </div>
          <div
            aria-live="polite"
          />
        </fieldset>
      </div>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-fHekdT erljpX"
    >
      <div
        class="sc-eDLJxc gaGxPb undefined"
      >
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            aria-live="polite"
            class="navds-label"
          >
            knapp.tilbake
          </span>
        </button>
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            aria-live="polite"
            class="navds-label"
          >
            knapp.neste
          </span>
        </button>
      </div>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-jTQDnj emAaXc undefined"
    >
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        id="avbryt-btn"
        type="button"
      >
        <span
          aria-live="polite"
          class="navds-label"
        >
          knapp.avbryt
        </span>
      </button>
      <div
        aria-live="polite"
      />
    </fieldset>
  </form>
</div>
`;

exports[`Om den avdøde Snapshot 1`] = `
<div>
  <form>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe"
    >
      <h1
        class="center navds-heading navds-heading--medium"
      >
        dinSituasjon.tittel
      </h1>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe"
    >
      <h1
        class="navds-heading navds-heading--small"
      >
        dinSituasjon.undertittel
      </h1>
      <p
        class="navds-body-long"
      >
        dinSituasjon.ingress
      </p>
      <div
        aria-live="polite"
      />
    </fieldset>
    <div
      id="jobbStatus"
    >
      <fieldset
        aria-invalid="false"
        class="skjemagruppe checkboxgruppe"
      >
        <legend
          class="skjemagruppe__legend"
        >
          dinSituasjon.jobbStatus
        </legend>
        <label
          class="inputPanel checkboksPanel inputPanel--checked"
        >
          <input
            aria-checked="true"
            aria-invalid="false"
            checked=""
            class="inputPanel__field"
            required=""
            type="checkbox"
            value="jobbStatus.arbeidstaker"
          />
          <span
            class="inputPanel__label"
          >
            jobbStatus.arbeidstaker
          </span>
        </label>
        <label
          class="inputPanel checkboksPanel"
        >
          <input
            aria-checked="false"
            aria-invalid="false"
            class="inputPanel__field"
            required=""
            type="checkbox"
            value="jobbStatus.selvstendig"
          />
          <span
            class="inputPanel__label"
          >
            jobbStatus.selvstendig
          </span>
        </label>
        <label
          class="inputPanel checkboksPanel"
        >
          <input
            aria-checked="false"
            aria-invalid="false"
            class="inputPanel__field"
            required=""
            type="checkbox"
            value="jobbStatus.underUtdanning"
          />
          <span
            class="inputPanel__label"
          >
            jobbStatus.underUtdanning
          </span>
        </label>
        <label
          class="inputPanel checkboksPanel"
        >
          <input
            aria-checked="false"
            aria-invalid="false"
            class="inputPanel__field"
            required=""
            type="checkbox"
            value="jobbStatus.arbeidssoker"
          />
          <span
            class="inputPanel__label"
          >
            jobbStatus.arbeidssoker
          </span>
        </label>
        <label
          class="inputPanel checkboksPanel"
        >
          <input
            aria-checked="false"
            aria-invalid="false"
            class="inputPanel__field"
            required=""
            type="checkbox"
            value="jobbStatus.ingen"
          />
          <span
            class="inputPanel__label"
          >
            jobbStatus.ingen
          </span>
        </label>
        <div
          aria-live="polite"
        />
      </fieldset>
    </div>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-beySbM decPBp"
    >
      <fieldset
        aria-invalid="false"
        class="skjemagruppe"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.arbeidsforhold.tittel
        </h1>
        <div
          aria-live="polite"
        />
      </fieldset>
      <div
        class="navds-panel luft-under navds-panel--border"
      >
        <div
          class="kol-75"
        >
          <div
            class="skjemaelement"
          >
            <label
              class="skjemaelement__label"
              for="arbeidsforhold[0].arbeidsgiver"
            >
              dinSituasjon.arbeidsforhold.arbeidsgiver
            </label>
            <input
              aria-invalid="false"
              class="skjemaelement__input input--fullbredde"
              id="arbeidsforhold[0].arbeidsgiver"
              required=""
              type="text"
              value="Potetskreller AS"
            />
          </div>
        </div>
        <fieldset
          aria-invalid="false"
          class="skjemagruppe sc-csKIKE eJBcFQ"
        >
          <div
            id="arbeidsforhold[0].ansettelsesforhold"
          >
            <div
              class="skjemaelement"
            >
              <label
                class="skjemaelement__label"
              >
                dinSituasjon.arbeidsforhold.ansettelsesforhold
              </label>
              <div
                class="selectContainer input--l"
              >
                <select
                  aria-invalid="false"
                  class="skjemaelement__input"
                >
                  <option
                    value=""
                  >
                    felles.velg
                  </option>
                  <option
                    value="stillingType.fast"
                  >
                    stillingType.fast
                  </option>
                  <option
                    value="stillingType.midlertidig"
                  >
                    stillingType.midlertidig
                  </option>
                  <option
                    value="stillingType.sesongarbeid"
                  >
                    stillingType.sesongarbeid
                  </option>
                </select>
              </div>
            </div>
          </div>
          <div
            class="skjemaelement"
          >
            <label
              class="skjemaelement__label"
              for="arbeidsforhold[0].stillingsprosent"
            >
              dinSituasjon.arbeidsforhold.stillingsprosent
            </label>
            <input
              aria-invalid="false"
              class="skjemaelement__input input--fullbredde"
              id="arbeidsforhold[0].stillingsprosent"
              placeholder="dinSituasjon.arbeidsforhold.stillingsprosentPlaceholder"
              required=""
              type="text"
              value="100%"
            />
          </div>
          <div
            aria-live="polite"
          />
        </fieldset>
        <div
          id="arbeidsforhold[0].forventerEndretInntekt.svar"
        >
          <fieldset
            aria-invalid="false"
            class="skjemagruppe inputPanelGruppe sc-guDLRT iRKjLN"
          >
            <legend
              class="skjemagruppe__legend"
            >
              dinSituasjon.arbeidsforhold.forventerEndretInntekt.svar
            </legend>
            <div
              class="inputPanelGruppe__inner"
            >
              <label
                class="inputPanel radioPanel"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="inputPanel__field"
                  name="arbeidsforhold[0].forventerEndretInntekt.svar"
                  required=""
                  type="radio"
                  value="radiobuttons.ja"
                />
                <span
                  class="inputPanel__label"
                >
                  radiobuttons.ja
                </span>
              </label>
              <label
                class="inputPanel radioPanel"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="inputPanel__field"
                  name="arbeidsforhold[0].forventerEndretInntekt.svar"
                  required=""
                  type="radio"
                  value="radiobuttons.nei"
                />
                <span
                  class="inputPanel__label"
                >
                  radiobuttons.nei
                </span>
              </label>
              <label
                class="inputPanel radioPanel"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="inputPanel__field"
                  name="arbeidsforhold[0].forventerEndretInntekt.svar"
                  required=""
                  type="radio"
                  value="radiobuttons.vetIkke"
                />
                <span
                  class="inputPanel__label"
                >
                  radiobuttons.vetIkke
                </span>
              </label>
            </div>
            <div
              aria-live="polite"
            />
          </fieldset>
        </div>
      </div>
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          aria-live="polite"
          class="navds-label"
        >
          + 
          knapp.leggTilArbeidsforhold
        </span>
      </button>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-beySbM decPBp"
    >
      <fieldset
        aria-invalid="false"
        class="skjemagruppe"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.utdanning.tittelFullfoert
        </h1>
        <div
          aria-live="polite"
        />
      </fieldset>
      <div
        id="utdanning.hoyesteFullfoerteUtdanning"
      >
        <fieldset
          aria-invalid="false"
          class="skjemagruppe inputPanelGruppe"
        >
          <legend
            class="skjemagruppe__legend"
          >
            dinSituasjon.utdanning.hoyesteFullfoerteUtdanning
          </legend>
          <div
            class="inputPanelGruppe__inner"
          >
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="utdanning.hoyesteFullfoerteUtdanning"
                required=""
                type="radio"
                value="utdanning.grunnskole"
              />
              <span
                class="inputPanel__label"
              >
                utdanning.grunnskole
              </span>
            </label>
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="utdanning.hoyesteFullfoerteUtdanning"
                required=""
                type="radio"
                value="utdanning.videregående"
              />
              <span
                class="inputPanel__label"
              >
                utdanning.videregående
              </span>
            </label>
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="utdanning.hoyesteFullfoerteUtdanning"
                required=""
                type="radio"
                value="utdanning.fagbrev"
              />
              <span
                class="inputPanel__label"
              >
                utdanning.fagbrev
              </span>
            </label>
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="utdanning.hoyesteFullfoerteUtdanning"
                required=""
                type="radio"
                value="utdanning.bachelorgrad"
              />
              <span
                class="inputPanel__label"
              >
                utdanning.bachelorgrad
              </span>
            </label>
            <label
              class="inputPanel radioPanel inputPanel--checked"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                checked=""
                class="inputPanel__field"
                name="utdanning.hoyesteFullfoerteUtdanning"
                required=""
                type="radio"
                value="utdanning.mastergrad"
              />
              <span
                class="inputPanel__label"
              >
                utdanning.mastergrad
              </span>
            </label>
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="utdanning.hoyesteFullfoerteUtdanning"
                required=""
                type="radio"
                value="utdanning.ingen"
              />
              <span
                class="inputPanel__label"
              >
                utdanning.ingen
              </span>
            </label>
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="utdanning.hoyesteFullfoerteUtdanning"
                required=""
                type="radio"
                value="utdanning.annen"
              />
              <span
                class="inputPanel__label"
              >
                utdanning.annen
              </span>
            </label>
          </div>
          <div
            aria-live="polite"
          />
        </fieldset>
      </div>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-beySbM decPBp"
    >
      <fieldset
        aria-invalid="false"
        class="skjemagruppe"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.andreYtelser.tittel
        </h1>
        <p
          class="navds-body-long"
        >
          dinSituasjon.andreYtelser.ingress
        </p>
        <div
          aria-live="polite"
        />
      </fieldset>
      <div
        id="andreYtelser.kravOmAnnenStonad.svar"
      >
        <fieldset
          aria-invalid="false"
          class="skjemagruppe inputPanelGruppe sc-guDLRT iRKjLN"
        >
          <legend
            class="skjemagruppe__legend"
          >
            dinSituasjon.andreYtelser.kravOmAnnenStonad.svar
          </legend>
          <div
            class="inputPanelGruppe__inner"
          >
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="andreYtelser.kravOmAnnenStonad.svar"
                required=""
                type="radio"
                value="radiobuttons.ja"
              />
              <span
                class="inputPanel__label"
              >
                radiobuttons.ja
              </span>
            </label>
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="andreYtelser.kravOmAnnenStonad.svar"
                required=""
                type="radio"
                value="radiobuttons.nei"
              />
              <span
                class="inputPanel__label"
              >
                radiobuttons.nei
              </span>
            </label>
          </div>
          <div
            aria-live="polite"
          />
        </fieldset>
      </div>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-beySbM decPBp"
    >
      <div
        id="andreYtelser.annenPensjon.svar"
      >
        <fieldset
          aria-invalid="false"
          class="skjemagruppe inputPanelGruppe sc-guDLRT iRKjLN"
        >
          <legend
            class="skjemagruppe__legend"
          >
            dinSituasjon.andreYtelser.annenPensjon.svar
          </legend>
          <div
            class="inputPanelGruppe__inner"
          >
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="andreYtelser.annenPensjon.svar"
                required=""
                type="radio"
                value="radiobuttons.ja"
              />
              <span
                class="inputPanel__label"
              >
                radiobuttons.ja
              </span>
            </label>
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="andreYtelser.annenPensjon.svar"
                required=""
                type="radio"
                value="radiobuttons.nei"
              />
              <span
                class="inputPanel__label"
              >
                radiobuttons.nei
              </span>
            </label>
          </div>
          <div
            aria-live="polite"
          />
        </fieldset>
      </div>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-beySbM decPBp"
    >
      <div
        id="andreYtelser.mottarPensjonUtland.svar"
      >
        <fieldset
          aria-invalid="false"
          class="skjemagruppe inputPanelGruppe sc-guDLRT iRKjLN"
        >
          <legend
            class="skjemagruppe__legend"
          >
            dinSituasjon.andreYtelser.mottarPensjonUtland.svar
          </legend>
          <div
            class="skjemagruppe__description"
          >
            <div>
              <button
                aria-expanded="false"
                class="sc-dmyDGi gqYaIN navds-button navds-button--primary navds-button--medium"
                data-testid="hvorforPanel_toggle"
                type="button"
              >
                <span
                  aria-live="polite"
                  class="navds-label"
                >
                  <span>
                    hvorforSpoerVi
                  </span>
                  <span>
                    <svg
                      fill="none"
                      focusable="false"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            class="inputPanelGruppe__inner"
          >
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="andreYtelser.mottarPensjonUtland.svar"
                required=""
                type="radio"
                value="radiobuttons.ja"
              />
              <span
                class="inputPanel__label"
              >
                radiobuttons.ja
              </span>
            </label>
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="andreYtelser.mottarPensjonUtland.svar"
                required=""
                type="radio"
                value="radiobuttons.nei"
              />
              <span
                class="inputPanel__label"
              >
                radiobuttons.nei
              </span>
            </label>
          </div>
          <div
            aria-live="polite"
          />
        </fieldset>
      </div>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-fHekdT erljpX"
    >
      <div
        class="sc-eDLJxc gaGxPb undefined"
      >
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            aria-live="polite"
            class="navds-label"
          >
            knapp.tilbake
          </span>
        </button>
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            aria-live="polite"
            class="navds-label"
          >
            knapp.neste
          </span>
        </button>
      </div>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-jTQDnj emAaXc undefined"
    >
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        id="avbryt-btn"
        type="button"
      >
        <span
          aria-live="polite"
          class="navds-label"
        >
          knapp.avbryt
        </span>
      </button>
      <div
        aria-live="polite"
      />
    </fieldset>
  </form>
</div>
`;
